# CMake-Concepts

./: .gitignore  CMakeFlowchart.pulm  CMakeLists.txt  README.md
.devcontainer/: Dockerfile  Dockerfile.alpine  devcontainer.json
01-hello-world/: CMakeLists.txt  README.md  main.cpp
01-hello-world/.devcontainer/: devcontainer.json
02-configure-header-file/: CMakeLists.txt  README.md  version.cpp.in
02-configure-header-file/.devcontainer/: Dockerfile  devcontainer.json
03-specify-cpp-standard/: CMakeLists.txt  README.md  main.cpp
03-specify-cpp-standard/.devcontainer/: devcontainer.json
03-specify-cpp-standard/include/: cogen.hpp
04-static-library/: CMakeLists.txt  README.md
04-static-library/.devcontainer/: devcontainer.json
04-static-library/include/vegetable/: vegetable.h
04-static-library/src/: main.cpp  vegetable.cpp
05-shared-library/: CMakeLists.txt  README.md
05-shared-library/.devcontainer/: devcontainer.json
05-shared-library/src/: fruit.cpp
06-third-party-library/: CMakeLists.txt  README.md  main.cpp
06-third-party-library/.devcontainer/: Dockerfile  devcontainer.json
07-code-generation/: CMakeLists.txt  README.md  main.cpp  version.cpp.in  version.hpp  version.py
07-code-generation/.devcontainer/: devcontainer.json
08-testing-support/: README.md
08-testing-support-catch2/: CMakeLists.txt  README.md
08-testing-support-catch2/.devcontainer/: devcontainer.json
08-testing-support-catch2/tests/: test_bdd_example.cpp
08-testing-support-gtest/: CMakeLists.txt  README.md
08-testing-support-gtest/.devcontainer/: Dockerfile  devcontainer.json
08-testing-support-gtest/include/CoinFlipper/: Rnd.hpp
08-testing-support-gtest/test/: mock_Rnd.hpp  mock_xdev.cpp  test1_CoinFlipper.cpp  test3_xdev.cpp
08-testing-support/gtest/: README.md
08-testing-support/gtest/src/: CoinFlipper.cpp
09-installing/: CMakeLists.txt  README.md  cmake_uninstall.cmake.in
09-installing/.devcontainer/: devcontainer.json
09-installing/include/fruit/: fruit.h
09-installing/src/: main.cpp
10-devcontainer/.devcontainer/: devcontainer.json
11-static-code-analysis/: README.md
11-static-code-analysis-clang-format/: README.md
11-static-code-analysis-clang-format/.devcontainer/: Dockerfile
11-static-code-analysis-clang-format/include/: clang-format.cmake
11-static-code-analysis-cppcheck/: README.md
11-static-code-analysis-scan-build/: README.md
11-static-code-analysis-scan-build/.devcontainer/: devcontainer.json
11-static-code-analysis-scan-build/subproject1/: CMakeLists.txt
11-static-code-analysis/clang-format/: CMakeLists.txt
11-static-code-analysis/clang-format/.devcontainer/: devcontainer.json
11-static-code-analysis/clang-format/subproject1/: main1.cpp
11-static-code-analysis/clang-format/subproject2/: main2.cpp
11-static-code-analysis/cppcheck/: CMakeLists.txt  README.md
11-static-code-analysis/cppcheck/.devcontainer/: Dockerfile  devcontainer.json
11-static-code-analysis/scan-build/: CMakeLists.txt
11-static-code-analysis/scan-build/.devcontainer/: Dockerfile  devcontainer.json
11-static-code-analysis/scan-build/scripts/: run_scan_build.sh
11-static-code-analysis/scan-build/subproject1/: main1.cpp
11-static-code-analysis/scan-build/subproject2/: main2.cpp
12-cdash-and-ci-pipeline/: CMakeLists.txt  CTestConfig.cmake  README.md  ci_pipeline.cmake  cmake-variants.yaml  test_results.py  test_results.xlsx
12-cdash-and-ci-pipeline/.devcontainer/: Dockerfile  devcontainer.json
12-cdash-and-ci-pipeline/include/addressSanitizerDefects/: addressSanitizerDefects.hpp
12-cdash-and-ci-pipeline/include/threadSanitizerDefects/: threadSanitizerDefects.hpp
12-cdash-and-ci-pipeline/include/undefinedBehaviorSanitizerDefects/: undefinedBehaviorSanitizerDefects.hpp
12-cdash-and-ci-pipeline/src/: addressSanitizerDefects.cpp  main.cpp  threadSanitizerDefects.cpp  undefinedBehaviorSanitizerDefects.cpp
12-cdash-and-ci-pipeline/test/: test_addressSanitizerDefects.cpp  test_threadSanitizerDefects.cpp  test_undefinedBehaviorSanitizerDefects.cpp
14-documentation-generation/: CMakeLists.txt  Doxyfile.in  conf.py  index.rst  references.txt
14-documentation-generation-sphinx_doxygen/: CMakeLists.txt  README.md
14-documentation-generation-sphinx_doxygen/.devcontainer/: Dockerfile  requirements.txt
14-documentation-generation-sphinx_doxygen/docs/: conf.py
14-documentation-generation-sphinx_doxygen/docs/requirements/: SOFTWARE.md
14-documentation-generation-sphinx_needs/: README.md
14-documentation-generation-sphinx_needs/docs/: conf.py  reports.rst
14-documentation-generation/.devcontainer/: Dockerfile  devcontainer.json  requirements.txt
14-documentation-generation/cmake/: FixLatexCode.cmake  RenderPlantUML.cmake
14-documentation-generation/docs/: conf.py  doxygen.rst  index.rst
14-documentation-generation/docs/doxygen/: Doxyfile.in
14-documentation-generation/docs/sphinx/: conf.py.in
14-documentation-generation/library_system/include/library_system/: library_system.hpp
14-documentation-generation/sphinx_doxygen/.devcontainer/: devcontainer.json
14-documentation-generation/sphinx_doxygen/app/: main.cpp
14-documentation-generation/sphinx_doxygen/docs/: conf.py  doxygen.rst  index.rst
14-documentation-generation/sphinx_doxygen/docs/sphinx/: conf.py.in
14-documentation-generation/sphinx_needs/: CMakeLists.txt  README.md
14-documentation-generation/sphinx_needs/.devcontainer/: Dockerfile  requirements.txt
14-documentation-generation/sphinx_needs/docs/: implementation.rst  index.rst  requirements.rst
14-documentation-generation/sphinx_needs/docs/_doxygen/: Doxyfile.in
14-documentation-generation/sphinx_needs/docs/reports/: index.rst
14-documentation-generation/sphinx_needs/docs/requirements/: index.rst
14-documentation-generation/sphinx_needs/docs/specifications/: index.rst
14-documentation-generation/sphinx_needs/docs/testing/: index.rst
14-documentation-generation/sphinx_needs/library_system/src/: library_system.cpp
14-documentation-generation/test/: library_system_test.cpp
(+7 files in other folders)
